Cleaned up floating form layout issues on settings page.

--- a/css/options.css
+++ b/css/options.css
@@ -6,6 +6,11 @@ h1 {
 	color: #088;
 }
 
+div.floatContainer {
+	overflow: auto;
+	width: 100%;
+}
+
 #logo {
 	float: left;
 }
